--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&family=Quicksand:wght@300&display=swap');
 
 .nav-item{
     color: rgb(197, 182, 182);
     position: relative;
-    overflow: hidden;
+    overflow:hidden;
     transition: 200ms;
     padding:.5rem;
     font-family: 'QuickSand', sans-serif;
@@ -33,7 +33,6 @@
     width:100%;
     transform: translateX(100%);
     height: .13rem;
-    background-color: black;
 }
 .nav-item::after{
     content: '';
@@ -44,7 +43,6 @@
     width:100%;
     transform: translateX(-100%);
     height: .2rem;
-    background-color: black;
 }
 .nav{
     display: flex;
