--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,6 +1,6 @@
 .hi{
     font-family: "betterday";
-    color: white;
+    color: rgb(247, 111, 111);
     font-size: 10rem;
     margin-top: 5rem;
     text-align: center;
@@ -41,6 +41,7 @@
 .li-topic{
     text-decoration: underline;
     margin-bottom: 2rem;
+    color:rgb(170, 142, 91);
 }
 a{
     color:yellow;
@@ -69,4 +70,8 @@ hr{
     color:rgb(49, 43, 43);
     box-shadow: .1rem .1rem .1rem .1rem rgb(24, 20, 20);
     margin: 2rem 0;
+}
+
+.topic{
+    max-width: 90vw;
 }
