--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,6 +1,8 @@
 .projects{
-    display: grid;
-    place-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .projects-header{
