--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -8,22 +8,7 @@
     padding:.5rem;
     font-family: 'QuickSand', sans-serif;
 }
-.nav-item:hover::after{
-    z-index: 1;
-    background-color: #4158D0;
-    background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
-    transform: translateX(0);
-}
-.nav-item:hover{
-    cursor: pointer;
-    color:rgb(172, 172, 112);
-}
-.nav-item:hover::before{
-    z-index: 1;
-    background-color: #4158D0;
-    background-image: linear-gradient(100deg, #FFCC70 6%, #C850C0 46%, #4158D0 0%);
-    transform: translateX(0);
-}
+
 .nav-item::before{
     content: '';
     position: absolute;
@@ -44,12 +29,30 @@
     transform: translateX(-100%);
     height: .2rem;
 }
+
+.nav-item:hover::after{
+    z-index: 1;
+    background-color: #4158D0;
+    background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+    transform: translateX(0);
+}
+.nav-item:hover{
+    cursor: pointer;
+    color:rgb(172, 172, 112);
+}
+.nav-item:hover::before{
+    z-index: 1;
+    background-color: #4158D0;
+    background-image: linear-gradient(100deg, #FFCC70 6%, #C850C0 46%, #4158D0 0%);
+    transform: translateX(0);
+}
+
 .nav{
     display: flex;
     align-items: center;
     justify-content: space-around;
     width:100vw;
-    height: 10vh;
+    height: 5rem;
     background-color: rgb(32, 27, 27);
     box-shadow: .1rem .1rem .1rem .1rem rgb(24, 20, 20);
 }
