--- a/src/styles/Chess.css
+++ b/src/styles/Chess.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
-.chess{
+#chessDiv{
     width:28rem;
     transition: 200ms;
     font-size: 1.4em;
@@ -7,11 +7,30 @@
     flex-direction: column;
     border-radius: .3rem;
     height:15rem;
-    padding : 0.75rem 0.75rem;
-    background-color: rgb(43, 40, 40);
+    justify-content: center;
+    padding-bottom: 3rem;
+    align-items: center;
+    
 }
 
-.chess > p{
-    margin-bottom: -1.5rem;
+#chessDiv > p{
     font-family: 'VT323', monospace;
+    margin-bottom: -1.5rem;
+}
+
+.chessLight{
+    background-color: rgb(75, 155, 102);
+}
+.chessLight > p{
+    color: rgb(70, 63, 60);
+}
+
+.chessDark{
+    background-color: rgb(53, 47, 47);
+}
+
+
+.chessDark > p{
+    color : white;
+    
 }
