--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,6 +1,6 @@
 .contact-header{
-    font-family: 'betterday';
-    color: rgb(156, 194, 224);
+    font-family: 'ok';
+    color: rgb(39, 160, 9);
     font-size: 10rem;
     text-align: center;
 }
@@ -27,7 +27,10 @@
     color:white;
     font-family: 'QuickSand';
     font-size: 1.3rem;
-    margin-top: 7rem;
-    margin-bottom: 2rem;
+    /* position: absolute; */
+    /* left: 40%; */
+    position: relative;
+    top: 2rem;
+    /* margin-bottom: 2rem; */
     text-align: center;
 }
